--- a/styles.css
+++ b/styles.css
@@ -32,10 +32,31 @@ body {
     border: 1px solid #000; /* Optional: border for spotlights */
 }
 
-.light {
-    display: inline-block;
-    background-color: white;
+.rectangle {
+    width: 500px;
+    height: 300px;
+    background-color: #333;
+    position: relative;
+    margin: 0 auto;
+    margin-top: 50px;
 }
+
+.light {
+    width: 50px;
+    height: 50px;
+    background-color: yellow;
+    border-radius: 50%;
+    position: absolute;
+}
+
+#light1 { top: 10px; left: 10px; }
+#light2 { top: 10px; left: 100px; }
+#light3 { top: 10px; left: 190px; }
+#light4 { top: 10px; left: 280px; }
+#light5 { top: 10px; left: 370px; }
+#light6 { top: 10px; left: 460px; }
+#light7 { top: 10px; left: 550px; }
+#light8 { top: 10px; left: 640px; }
 
 #spotlight1 { top: 50px; left: 50px; }
 #spotlight2 { top: 50px; left: 200px; }
